syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc RegisterOTPValidation(RegisterOTPValidationRequest) returns (RegisterOTPValidationResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

// Register

message RegisterRequest {
  string email = 1;
  string password = 2;
  string phone_number = 3;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
  string otp_validation_key = 3;
}


// Register OTP Validation

message RegisterOTPValidationRequest {
  string key = 1;
  string otp = 2;
}

message RegisterOTPValidationResponse {
  int64 status = 1;
  string error = 2;
}


// Login

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}